--- a/index.html
+++ b/index.html
@@ -5,206 +5,201 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Portafolio de Brenda</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+<head>
+	<title>Portafolio de Brenda</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
 
-				<!-- Intro -->
-					<div id="intro">
-						<h1>Bienvenid@ a mi <br />
-						Portafolio</h1>
-						<p>Soy</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
+<body class="is-preload">
 
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">Brenda</a>
+	<!-- Wrapper -->
+	<div id="wrapper" class="fade-in">
+
+		<!-- Intro -->
+		<div id="intro">
+			<h1>Bienvenid@ a mi <br />
+				Portafolio</h1>
+			<p>Soy</p>
+			<ul class="actions">
+				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+			</ul>
+		</div>
+
+		<!-- Header -->
+		<header id="header">
+			<a href="index.html" class="logo">Brenda</a>
+		</header>
+
+		<!-- Nav -->
+		<nav id="nav">
+			<ul class="links">
+				<li class="active"><a href="index.html">Acerca de mi</a></li>
+				<li><a href="experiencia.html">Experiencia</a></li>
+				<li><a href="tecnologias.html">Tecnologías que he usado</a></li>
+			</ul>
+			<ul class="icons">
+				<li><a href="https://www.linkedin.com/in/brenda-saldivar126/" class="icon brands fa-linkedin"><span
+							class="label">LinkedIn</span></a></li>
+				<li><a href="https://github.com/BrendaSaldiv" class="icon brands fa-github"><span
+							class="label">GitHub</span></a></li>
+				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+			</ul>
+		</nav>
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- Featured Post -->
+			<article class="post featured">
+				<header class="major">
+					<h2><a>Acerca de mi</a></h2>
+					<p></p>
+				</header>
+				<a href="#" class="image main"><img src="images/Captura.JPG" alt="" /></a>
+				<ul class="actions special">
+					<li>
+						<h2>Proyectos en los que he trabajado</h2>
+					</li>
+				</ul>
+			</article>
+
+			<!-- Posts -->
+			<section class="posts">
+				<article>
+					<header>
+						<span class="date">Marzo 2025</span>
+						<h2><a href="https://danielarog.github.io/Equipo6-Hackathon/Equipo6/">Landing Page E-commerce
+								Deportivo<br />
+							</a></h2>
 					</header>
+					<a href="https://danielarog.github.io/Equipo6-Hackathon/Equipo6/" class="image fit"><img
+							src="images/hackaton.JPG" alt="" /></a>
+					<p>Este es una landin page</p>
+					<ul class="actions special">
+						<li><a href="https://danielarog.github.io/Equipo6-Hackathon/Equipo6/" class="button">Ver</a>
+						</li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<span class="date">Marzo, 2025</span>
+						<h2><a href="https://equipo-3-generation.github.io/CodigoCepa/index.html">h3rmeDia<br />
+								sitio web</a></h2>
+					</header>
+					<a href="https://equipo-3-generation.github.io/CodigoCepa/index.html" class="image fit"><img
+							src="images/hermedia.JPG" alt="" /></a>
+					<p>h3rmeDia E-commerce</p>
+					<ul class="actions special">
+						<li><a href="https://equipo-3-generation.github.io/CodigoCepa/index.html" class="button">Ver</a>
+						</li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<span class="date">Febrero, 2025</span>
+						<h2><a href="#">Página de contacto<br />
+								enlace</a></h2>
+					</header>
+					<a href="#" class="image fit"><img src="images/p2.JPG" alt="" /></a>
+					<p>Esta página de contacto utilizo html.</p>
+					<ul class="actions special">
+						<li><a href="#" class="button">Ver</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<span class="date">Febrero 2025</span>
+						<h2><a href="#">Página de contacto con<br />
+								más secciones</a></h2>
+					</header>
+					<a href="#" class="image fit"><img src="images/p3.jpg" alt="" /></a>
+					<p>Se añadieron secciones de noticias y adds</p>
+					<ul class="actions special">
+						<li><a href="#" class="button">Ver</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<span class="date">Febrero 2025</span>
+						<h2><a href="#">Aprendiendo a usar bootstrap</a></h2>
+					</header>
+					<a href="#" class="image fit"><img src="images/p4.JPG" alt="" /></a>
+					<p>En este lab aprendimos a usar bootstrap</p>
+					<ul class="actions special">
+						<li><a href="#" class="button">Ver</a></li>
+					</ul>
+				</article>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">Acerca de mi</a></li>
-							<li><a href="generic.html">Experiencia</a></li>
-							<li><a href="elements.html">Más info</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
-					</nav>
 
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<span class="date">18 de Marzo 2025</span>
-									<h2><a href="#">Acerca de mi</a></h2>
-									<p>Soy una desarrolladora fullstack jr</p>
-								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="posts" class="button large">Proyectos en los que he trabajado</a></li>
-								</ul>
-							</article>
-
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<span class="date">Marzo 2025</span>
-										<h2><a href="https://github.com/DanielaRoG/Equipo6-Hackathon.git">Landing Page E-commerce Deportivo<br />
-										enlace</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/hackaton.JPG" alt="" /></a>
-									<p>Este es una landin page</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Ver</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">Febrero, 2025</span>
-										<h2><a href="#">Página de contacto<br />
-										enlace</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/p2.JPG" alt="" /></a>
-									<p>Esta página de contacto utilizo html.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Ver</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">Febrero 2025</span>
-										<h2><a href="#">Página de contacto con<br />
-										más secciones</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/p3.jpg" alt="" /></a>
-									<p>Se añadieron secciones de noticias y adds</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Ver</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">Febrero 2025</span>
-										<h2><a href="#">Aprendiendo a usar bootstrap</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/p4.JPG" alt="" /></a>
-									<p>En este lab aprendimos a usar bootstrap</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-							
-
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
-
-					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
-
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+				<footer>
+					<div class="pagination">
+						<!--<a href="#" class="previous">Prev</a>-->
+						<a href="#" class="page active">1</a>
+						<a href="#" class="page">2</a>
+						<a href="#" class="next">Next</a>
 					</div>
+				</footer>
 
-			</div>
+		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<!-- Footer -->
+		<footer id="footer">
+			<section>
+				<a class="large">Contactemos</a>
+			</section>
+			<section class="split contact">
+				<section>
+					<h3>Teléfono</h3>
+					<p><a href="#">5511606000</a></p>
+				</section>
+				<section>
+					<h3>Email</h3>
+					<p><a href="#">brendas.g.saldivar@gmail.com</a></p>
+				</section>
+				<section>
+					<h3>Redes</h3>
+					<ul class="icons alt">
+						<li><a href="https://www.linkedin.com/in/brenda-saldivar126/"
+								class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/BrendaSaldiv" class="icon brands alt fa-github"><span
+									class="label">GitHub</span></a></li>
+						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a>
+						</li>
+						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a>
+						</li>
+					</ul>
+				</section>
+			</section>
+		</footer>
 
-	</body>
+		<!-- Copyright -->
+		<div id="copyright">
+			<ul>
+				<li>&copy; Untitled</li>
+				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
