Realice mejoras al portafolio

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">Brenda</a>
+			<a href="images/bren.jpg" class="logo">Brenda</a>
 		</header>
 
 		<!-- Nav -->
@@ -48,8 +48,6 @@
 							class="label">LinkedIn</span></a></li>
 				<li><a href="https://github.com/BrendaSaldiv" class="icon brands fa-github"><span
 							class="label">GitHub</span></a></li>
-				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 			</ul>
 		</nav>
 
@@ -81,7 +79,10 @@
 					</header>
 					<a href="https://danielarog.github.io/Equipo6-Hackathon/Equipo6/" class="image fit"><img
 							src="images/hackaton.JPG" alt="" /></a>
-					<p>Este es una landin page</p>
+					<p>Esta es una landin page de una página deportiva que realice con otras 2 desarrolladoras, 
+						aquí utilizamos bootstrap, y combinamos nuestras habilidades con esta tecnología para llegar
+						resultado
+					</p>
 					<ul class="actions special">
 						<li><a href="https://danielarog.github.io/Equipo6-Hackathon/Equipo6/" class="button">Ver</a>
 						</li>
@@ -95,7 +96,9 @@
 					</header>
 					<a href="https://equipo-3-generation.github.io/CodigoCepa/index.html" class="image fit"><img
 							src="images/hermedia.JPG" alt="" /></a>
-					<p>h3rmeDia E-commerce</p>
+					<p>H3rmeDia E-commerce es un proyecto en marcha que estoy realizando en colaboración 
+						de otras desarrolladoras, puedes darle un vistazo a nuestro avance.
+					</p>
 					<ul class="actions special">
 						<li><a href="https://equipo-3-generation.github.io/CodigoCepa/index.html" class="button">Ver</a>
 						</li>
@@ -108,9 +111,11 @@
 								enlace</a></h2>
 					</header>
 					<a href="#" class="image fit"><img src="images/p2.JPG" alt="" /></a>
-					<p>Esta página de contacto utilizo html.</p>
+					<p>En esta página colaboré en equipo y la parte de contacto fue la parte que
+						yo realicé usando puramente html.
+					</p>
 					<ul class="actions special">
-						<li><a href="#" class="button">Ver</a></li>
+						<li><a href="images/p2.JPG" class="button">Ver</a></li>
 					</ul>
 				</article>
 				<article>
@@ -120,9 +125,11 @@
 								más secciones</a></h2>
 					</header>
 					<a href="#" class="image fit"><img src="images/p3.jpg" alt="" /></a>
-					<p>Se añadieron secciones de noticias y adds</p>
+					<p>Esta es la version "mejorada" de la página de contacto
+						Se añadieron dos secciones, una para adds y otra para noticias.
+					</p>
 					<ul class="actions special">
-						<li><a href="#" class="button">Ver</a></li>
+						<li><a href="https://equipo-3-generation.github.io/Lab14-Equipo3/contacto.html" class="button">Ver</a></li>
 					</ul>
 				</article>
 				<article>
@@ -131,9 +138,11 @@
 						<h2><a href="#">Aprendiendo a usar bootstrap</a></h2>
 					</header>
 					<a href="#" class="image fit"><img src="images/p4.JPG" alt="" /></a>
-					<p>En este lab aprendimos a usar bootstrap</p>
+					<p>En este  pequeño ejercicio aprendí a usar usar bootstrap. Si bien parece un diseño, me gustó
+						realizarlo y hacerlo por eso lo añadí en mi portafolio.
+					</p>
 					<ul class="actions special">
-						<li><a href="#" class="button">Ver</a></li>
+						<li><a href="images/p4.JPG" class="button">Ver</a></li>
 					</ul>
 				</article>
 
@@ -172,9 +181,6 @@
 								class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/BrendaSaldiv" class="icon brands alt fa-github"><span
 									class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a>
-						</li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a>
 						</li>
 					</ul>
 				</section>
