--- a/experiencia.html
+++ b/experiencia.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Brenda</a>
+						<a href="images/bren.jpg" class="logo">Brenda</a>
 					</header>
 
 				<!-- Nav -->
@@ -32,8 +32,6 @@
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/brenda-saldivar126/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/BrendaSaldiv" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						</ul>
 					</nav>
 
@@ -76,8 +74,6 @@
 							<ul class="icons alt">
 								<li><a href="https://www.linkedin.com/in/brenda-saldivar126/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/BrendaSaldiv" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 						</section>
 					</section>
