--- a/tecnologias.html
+++ b/tecnologias.html
@@ -23,7 +23,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">Brenda</a>
+			<a href="images/bren.jpg" class="logo">Brenda</a>
 		</header>
 
 		<!-- Nav -->
@@ -31,16 +31,13 @@
 			<ul class="links">
 				<li><a href="index.html">Acerca de mi</a></li>
 				<li><a href="experiencia.html">Experiencia</a></li>
-				<li class="active"><a href="tecnologias.html">T
-					ecnologías que he usado</a></li>
+				<li class="active"><a href="tecnologias.html">Tecnologías que he usado</a></li>
 			</ul>
 			<ul class="icons">
 				<li><a href="https://www.linkedin.com/in/brenda-saldivar126/" class="icon brands fa-linkedin"><span
 							class="label">LinkedIn</span></a></li>
 				<li><a href="https://github.com/BrendaSaldiv" class="icon brands fa-github"><span
 							class="label">GitHub</span></a></li>
-				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 			</ul>
 		</nav>
 
@@ -79,8 +76,6 @@
 							<ul class="icons alt">
 								<li><a href="https://www.linkedin.com/in/brenda-saldivar126/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/BrendaSaldiv" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 						</section>
 					</section>
