Realicé pequeños cambios

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<h2><a>Acerca de mi</a></h2>
 					<p></p>
 				</header>
-				<a href="#" class="image main"><img src="images/Captura.JPG" alt="" /></a>
+				<a class="image main"><img src="images/Captura.JPG" alt="" /></a>
 				<ul class="actions special">
 					<li>
 						<h2>Proyectos en los que he trabajado</h2>
@@ -124,8 +124,8 @@
 						<h2><a href="#">Página de contacto con<br />
 								más secciones</a></h2>
 					</header>
-					<a href="#" class="image fit"><img src="images/p3.jpg" alt="" /></a>
-					<p>Esta es la version "mejorada" de la página de contacto
+					<a href="images/p3.jpg" class="image fit"><img src="images/p3.jpg" alt="" /></a>
+					<p>Esta es una version más completa de la página de contacto
 						Se añadieron dos secciones, una para adds y otra para noticias.
 					</p>
 					<ul class="actions special">
@@ -138,7 +138,8 @@
 						<h2><a href="#">Aprendiendo a usar bootstrap</a></h2>
 					</header>
 					<a href="#" class="image fit"><img src="images/p4.JPG" alt="" /></a>
-					<p>En este  pequeño ejercicio aprendí a usar usar bootstrap. Si bien parece un diseño, me gustó
+					<p>En este  pequeño ejercicio aprendí a usar usar bootstrap. Si bien parece un diseño 
+						muy simple, me gustó
 						realizarlo y hacerlo por eso lo añadí en mi portafolio.
 					</p>
 					<ul class="actions special">
