--- a/experiencia.html
+++ b/experiencia.html
@@ -58,7 +58,9 @@
 				<!-- Footer -->
 				<footer id="footer">
 					<section>
-						<a class="large">Contactemos</a>
+						<a class="large">
+							<h2>¡Contáctame!</h2>
+						</a>
 					</section>
 					<section class="split contact">
 						<section>
