--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@
 					<p></p>
 				</header>
 				<a class="image main"><img src="images/Captura.JPG" alt="" /></a>
-				<ul class="actions special">
-					<li>
-						<h2>Proyectos en los que he trabajado</h2>
-					</li>
-				</ul>
 			</article>
+				
+			<div class="post featured">
+				<h2>Proyectos en los que he trabajado</h2>
+			</div>
+						
+			
 
 			<!-- Posts -->
 			<section class="posts">
@@ -79,9 +80,9 @@
 					</header>
 					<a href="https://danielarog.github.io/Equipo6-Hackathon/Equipo6/" class="image fit"><img
 							src="images/hackaton.JPG" alt="" /></a>
-					<p>Esta es una landin page de una página deportiva que realice con otras 2 desarrolladoras, 
-						aquí utilizamos bootstrap, y combinamos nuestras habilidades con esta tecnología para llegar
-						resultado
+					<p>Esta es una landin page de una página deportiva que realicé con otras 2 desarrolladoras, 
+						aquí utilizamos bootstrap, y combinamos nuestras habilidades con esta tecnología para llegar a
+						 este innovador resultado.
 					</p>
 					<ul class="actions special">
 						<li><a href="https://danielarog.github.io/Equipo6-Hackathon/Equipo6/" class="button">Ver</a>
@@ -97,7 +98,7 @@
 					<a href="https://equipo-3-generation.github.io/CodigoCepa/index.html" class="image fit"><img
 							src="images/hermedia.JPG" alt="" /></a>
 					<p>H3rmeDia E-commerce es un proyecto en marcha que estoy realizando en colaboración 
-						de otras desarrolladoras, puedes darle un vistazo a nuestro avance.
+						con otras desarrolladoras, puedes darle un vistazo a nuestro avance.
 					</p>
 					<ul class="actions special">
 						<li><a href="https://equipo-3-generation.github.io/CodigoCepa/index.html" class="button">Ver</a>
@@ -107,10 +108,10 @@
 				<article>
 					<header>
 						<span class="date">Febrero, 2025</span>
-						<h2><a href="#">Página de contacto<br />
+						<h2><a href="images/p2.JPG">Página de contacto<br />
 								enlace</a></h2>
 					</header>
-					<a href="#" class="image fit"><img src="images/p2.JPG" alt="" /></a>
+					<a href="images/p2.JPG" class="image fit"><img src="images/p2.JPG" alt="" /></a>
 					<p>En esta página colaboré en equipo y la parte de contacto fue la parte que
 						yo realicé usando puramente html.
 					</p>
@@ -121,10 +122,10 @@
 				<article>
 					<header>
 						<span class="date">Febrero 2025</span>
-						<h2><a href="#">Página de contacto con<br />
+						<h2><a href="https://equipo-3-generation.github.io/Lab14-Equipo3/contacto.html">Página de contacto con<br />
 								más secciones</a></h2>
 					</header>
-					<a href="images/p3.jpg" class="image fit"><img src="images/p3.jpg" alt="" /></a>
+					<a href="https://equipo-3-generation.github.io/Lab14-Equipo3/contacto.html" class="image fit"><img src="images/p3.JPG" alt="" /></a>
 					<p>Esta es una version más completa de la página de contacto
 						Se añadieron dos secciones, una para adds y otra para noticias.
 					</p>
@@ -135,9 +136,9 @@
 				<article>
 					<header>
 						<span class="date">Febrero 2025</span>
-						<h2><a href="#">Aprendiendo a usar bootstrap</a></h2>
+						<h2><a href="images/p4.JPG">Aprendiendo a usar bootstrap</a></h2>
 					</header>
-					<a href="#" class="image fit"><img src="images/p4.JPG" alt="" /></a>
+					<a href="images/p4.JPG" class="image fit"><img src="images/p4.JPG" alt="" /></a>
 					<p>En este  pequeño ejercicio aprendí a usar usar bootstrap. Si bien parece un diseño 
 						muy simple, me gustó
 						realizarlo y hacerlo por eso lo añadí en mi portafolio.
@@ -147,24 +148,12 @@
 					</ul>
 				</article>
 
-
-
-				<!-- Footer -->
-				<footer>
-					<div class="pagination">
-						<!--<a href="#" class="previous">Prev</a>-->
-						<a href="#" class="page active">1</a>
-						<a href="#" class="page">2</a>
-						<a href="#" class="next">Next</a>
-					</div>
-				</footer>
-
 		</div>
 
 		<!-- Footer -->
 		<footer id="footer">
 			<section>
-				<a class="large">Contactemos</a>
+				<a class="large"><h2>¡Contáctame!</h2></a>
 			</section>
 			<section class="split contact">
 				<section>
