Hice más ajustes al portafolio

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 				</header>
 				<a class="image main"><img src="images/Captura.JPG" alt="" /></a>
 			</article>
-				
+
 			<div class="post featured">
 				<h2>Proyectos en los que he trabajado</h2>
 			</div>
-						
-			
+
+
 
 			<!-- Posts -->
 			<section class="posts">
@@ -80,9 +80,9 @@
 					</header>
 					<a href="https://danielarog.github.io/Equipo6-Hackathon/Equipo6/" class="image fit"><img
 							src="images/hackaton.JPG" alt="" /></a>
-					<p>Esta es una landin page de una página deportiva que realicé con otras 2 desarrolladoras, 
+					<p>Esta es una landin page de una página deportiva que realicé con otras 2 desarrolladoras,
 						aquí utilizamos bootstrap, y combinamos nuestras habilidades con esta tecnología para llegar a
-						 este innovador resultado.
+						este innovador resultado.
 					</p>
 					<ul class="actions special">
 						<li><a href="https://danielarog.github.io/Equipo6-Hackathon/Equipo6/" class="button">Ver</a>
@@ -91,13 +91,13 @@
 				</article>
 				<article>
 					<header>
-						<span class="date">Marzo, 2025</span>
+						<span class="date">Marzo 2025</span>
 						<h2><a href="https://equipo-3-generation.github.io/CodigoCepa/index.html">h3rmeDia<br />
 								sitio web</a></h2>
 					</header>
 					<a href="https://equipo-3-generation.github.io/CodigoCepa/index.html" class="image fit"><img
 							src="images/hermedia.JPG" alt="" /></a>
-					<p>H3rmeDia E-commerce es un proyecto en marcha que estoy realizando en colaboración 
+					<p>H3rmeDia E-commerce es un proyecto en marcha que estoy realizando en colaboración
 						con otras desarrolladoras, puedes darle un vistazo a nuestro avance.
 					</p>
 					<ul class="actions special">
@@ -107,7 +107,7 @@
 				</article>
 				<article>
 					<header>
-						<span class="date">Febrero, 2025</span>
+						<span class="date">Febrero 2025</span>
 						<h2><a href="images/p2.JPG">Página de contacto<br />
 								enlace</a></h2>
 					</header>
@@ -122,15 +122,18 @@
 				<article>
 					<header>
 						<span class="date">Febrero 2025</span>
-						<h2><a href="https://equipo-3-generation.github.io/Lab14-Equipo3/contacto.html">Página de contacto con<br />
+						<h2><a href="https://equipo-3-generation.github.io/Lab14-Equipo3/contacto.html">Página de
+								contacto con<br />
 								más secciones</a></h2>
 					</header>
-					<a href="https://equipo-3-generation.github.io/Lab14-Equipo3/contacto.html" class="image fit"><img src="images/p3.JPG" alt="" /></a>
+					<a href="https://equipo-3-generation.github.io/Lab14-Equipo3/contacto.html" class="image fit"><img
+							src="images/p3.JPG" alt="" /></a>
 					<p>Esta es una version más completa de la página de contacto
 						Se añadieron dos secciones, una para adds y otra para noticias.
 					</p>
 					<ul class="actions special">
-						<li><a href="https://equipo-3-generation.github.io/Lab14-Equipo3/contacto.html" class="button">Ver</a></li>
+						<li><a href="https://equipo-3-generation.github.io/Lab14-Equipo3/contacto.html"
+								class="button">Ver</a></li>
 					</ul>
 				</article>
 				<article>
@@ -139,7 +142,7 @@
 						<h2><a href="images/p4.JPG">Aprendiendo a usar bootstrap</a></h2>
 					</header>
 					<a href="images/p4.JPG" class="image fit"><img src="images/p4.JPG" alt="" /></a>
-					<p>En este  pequeño ejercicio aprendí a usar usar bootstrap. Si bien parece un diseño 
+					<p>En este pequeño ejercicio aprendí a usar usar bootstrap. Si bien parece un diseño
 						muy simple, me gustó
 						realizarlo y hacerlo por eso lo añadí en mi portafolio.
 					</p>
@@ -153,7 +156,9 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<section>
-				<a class="large"><h2>¡Contáctame!</h2></a>
+				<a class="large">
+					<h2>¡Contáctame!</h2>
+				</a>
 			</section>
 			<section class="split contact">
 				<section>
