--- a/tecnologias.html
+++ b/tecnologias.html
@@ -57,20 +57,44 @@
 					</p>
 
 					<div class="tech-icons">
-						<div class="tech-item"><i class="fab fa-html5 html"></i>HTML</div>
-						<div class="tech-item"><i class="fab fa-css3-alt css"></i>CSS</div>
-						<div class="tech-item"><i class="fab fa-js js"></i>JavaScript</div>
-						<div class="tech-item"><i class="fab fa-bootstrap bootstrap"></i>Bootstrap</div>
-						<div class="tech-item"><i class="fab fa-figma figma"></i>Figma</div>
-						<div class="tech-item"><i class="fab fa-python python"></i>Python</div>
-						<div class="tech-item"><i class="fab fa-java java"></i>Java</div>
-						<div class="tech-item"><i class="fab fa-git git"></i>Git</div>
-						<div class="tech-item"><i class="fab fa-github github"></i>GitHub</div>
-						<div class="tech-item"><i class="fab fa-windows vs-code"></i>VS Code</div>
-						<div class="tech-item"><i class="fab fa-java intellij"></i>IntelliJ</div>
+						<div class="tech-item">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" />
+						  HTML</div>
+						<div class="tech-item">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" />
+						  CSS</div>
+						<div class="tech-item">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" />
+						  JavaScript</div>
+						<div class="tech-item">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bootstrap/bootstrap-original.svg" />
+						  Bootstrap</div>
+						<div class="tech-item">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" />
+						  Figma</div>
+						<div class="tech-item">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
+						  Python</div>
+						<div class="tech-item">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" />
+						  Java</div>
+
+						<div class="tech-item">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+						  GitHub</div>
+						<div class="tech-item">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vscode/vscode-original.svg" />
+						  VS Code</div>
+						<div class="tech-item">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/intellij/intellij-original.svg" />
+						  IntelliJ</div>
 						<div class="tech-item"><i class="fas fa-users scrum"></i>SCRUM</div>
-						<div class="tech-item"><i class="fas fa-tasks jira"></i>Jira</div>
-						<div class="tech-item"><i class="fab fa-trello trello"></i>Trello</div>
+						<div class="tech-item">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jira/jira-original.svg" />
+						  Jira</div>
+						<div class="tech-item">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/trello/trello-original.svg" />
+						  Trello</div>
 						<div class="tech-item"><i class="fas fa-robot ai"></i>IA</div>
 					</div>
 
