--- a/experiencia.html
+++ b/experiencia.html
@@ -45,12 +45,12 @@
 									<h1>Esta es mi<br />
 									experiencia</h1>
 									<p><br />
-										Soy una profesional en el área de Desarrollo de Software con experiencia en lenguajes como HTML, CSS y JavaScript, en constante capacitación profesional, como UX Designer o Desarrollador Java Fullstack Jr.<br />
+										Soy una profesional en el área de Desarrollo de Software con experiencia en lenguajes como HTML, CSS, JavaScript, Java, entre otros. Estoy en constante capacitación profesional, como Desarrollador Java Fullstack Jr. O UX Designer<br />
 									</p>
 								</header>
 								<div class="image main"><img src="images/resume.JPG" alt="" /></div>
 								<p>Mis habilidades blandas incluyen:</p>
-								<p>Orientación al detalle | Comunicación efectiva | Trabajo en equipo | Gestión de tiempo | Autodidacta | Aprendizaje agil | Resolución deproblemas | Pensamiento crítico y analítico | Ética profesional | Adaptabilidad | Creatividad</p>
+								<p>Orientación al detalle | Comunicación efectiva | Trabajo en equipo | Gestión de tiempo | Autodidacta | Aprendizaje agil | Resolución de problemas | Pensamiento crítico y analítico | Ética profesional | Adaptabilidad | Creatividad</p>
 							</section>
 
 					</div>
